# pytest-explorer

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
src/: app.rs  collect_test.rs  entities.rs  external_calls.rs  lib.rs  logs.rs  main.rs  parser.rs  ui.rs
tests/: pytest_aiohttp_collection.txt
