[package]
edition = "2021"
rust-version = "1.67"
name = "pytexp"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/antonguzun/pytest-explorer"
description = "terminal ui for exploring and running tests"
authors = ["Anton <ayuguzun@gmail.com>", ]

[dependencies]
anyhow = { version = "1.0.69" }
walkdir = "2.3.2"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
clap = { version = "4.1.8", features = ["derive"] }
bitflags = { version = "1.3.2" }
is-macro = { version = "0.2.2" }
itertools = { version = "0.10.5" }
log = { version = "0.4.17" }
once_cell = { version = "1.17.1" }
rustc-hash = { version = "1.1.0" }

tui = { package = "ratatui", version = "0.20.1" }
crossterm = "0.25"
unicode-width = "0.1.10"
ansi-to-tui = "3.0.0"
regex = "1.7.0"

rustpython-common = { git = "https://github.com/RustPython/RustPython.git", rev = "1871a1632e310985414211222f5bf8069678892f" }
rustpython-parser = { features = [
  "lalrpop",
  "serde",
], git = "https://github.com/RustPython/RustPython.git", rev = "1871a1632e310985414211222f5bf8069678892f" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }

[profile.release]
lto = true
opt-level = 3
